@@ -2557,7 +2557,13 @@ class Article {
 		$conds = $this->mTitle->pageCond();
 		$latest = $dbw->selectField( 'page', 'page_latest', $conds, __METHOD__ );
 		if( $latest === false ) {
-			$wgOut->showFatalError( wfMsgExt( 'cannotdelete', array( 'parse' ) ) );
+			$wgOut->showFatalError(
+				Html::rawElement(
+					'div',
+					array( 'class' => 'error mw-error-cannotdelete' ),
+					wfMsgExt( 'cannotdelete', array( 'parse' ), $this->mTitle->getPrefixedText() )
+				)
+			);
 			$wgOut->addHTML( Xml::element( 'h2', null, LogPage::logName( 'delete' ) ) );
 			LogEventsList::showLogExtract(
 				$wgOut,
@@ -2801,7 +2807,13 @@ class Article {
 			}
 		} else {
 			if( $error == '' ) {
-				$wgOut->showFatalError( wfMsgExt( 'cannotdelete', array( 'parse' ) ) );
+				$wgOut->showFatalError(
+					Html::rawElement(
+						'div',
+						array( 'class' => 'error mw-error-cannotdelete' ),
+						wfMsgExt( 'cannotdelete', array( 'parse' ), $this->mTitle->getPrefixedText() )
+					)
+				);
 				$wgOut->addHTML( Xml::element( 'h2', null, LogPage::logName( 'delete' ) ) );
 				LogEventsList::showLogExtract(
 					$wgOut,
